--- a/config/mappings.yaml
+++ b/config/mappings.yaml
@@ -299,3 +299,27 @@ species_mappings:
   zorilla:
     grouped: zorilla
     standardized: zorilla
+
+questions_to_output:
+  - species
+  - count
+  - moving
+  - eating
+  - standing
+  - interacting
+  - young_present
+  - resting
+  - horns_visible
+  - horns_count
+
+question_types:
+  species': cat
+  count': cat
+  moving': binary
+  eating': binary
+  standing': binary
+  interacting': binary
+  young_present': binary
+  resting': binary
+  horns_visible': binary
+  horns_count': cat
