--- a/config/ml_mappings.yaml
+++ b/config/ml_mappings.yaml
@@ -334,3 +334,23 @@ question_behaviors:
   - standing
   - interacting
   - resting
+
+panthera_to_snapshot_mappings:
+  vervetmonkey: monkeyvervet
+  capefox: foxcape
+  suni: suni
+  batearedfox: foxbateared
+  capeclawlessotter: ottercapeclawless
+  roan: roan
+  bontebok: bontebok
+  grysbok: grysbok
+  rhino: rhinoceros
+  samangomonkey: monkeysamango
+  otherbird: birdother
+  pangolin: pangolin
+  sitatunga: sitatunga
+  tsessebe: tsessebe
+  rhebok: rhebokgrey
+  bushbaby: bushbaby
+  meerkat: meerkatsuricate
+  gemsbok: gemsbokoryx
