--- a/config/cfg_default.yaml
+++ b/config/cfg_default.yaml
@@ -71,6 +71,56 @@ pre_processing_flags:
       output_time_format: '%H:%M:%S'
 
 ###################################################
+# Flags to define the bheavior of the
+# Classification Extractor
+###################################################
+
+extractor_flags:
+    ANSWER_MAPPER:
+      0: '0'
+      n: '0'
+      'no': '0'
+      1: '1'
+      y: '1'
+      'yes': '1'
+    ANSWER_TYPE_MAPPER:
+      species:
+        no animals present: blank
+        noanimalspresent: blank
+        nothing: blank
+        nothinghere: blank
+        nothingthere: blank
+      count:
+        '1150': '11-50'
+        '51': '51+'
+      horns_count:
+        '1150': '11-50'
+        '51': '51+'
+    CLASSIFICATION_INFO_MAPPER:
+      subject_ids: subject_id
+    CLASSIFICATION_INFO_TO_ADD:
+     - user_name
+     - user_id
+     - created_at
+     - subject_ids
+     - workflow_id
+     - workflow_version
+     - classification_id
+    QUESTIONS_TO_IGNORE:
+     - dontcare
+    QUESTION_NAME_MAPPER:
+      arethereanyyoungpresent: young_present
+      choice: species
+      doyouseeanyantlers: antlers_visible
+      doyouseeanyhorns: horns_visible
+      howmany: count
+      howmanyanimalscanyouseethathavehorns: horns_count
+      question: species
+    QUESTION_PREFIX: question
+    QUESTION_DELIMITER: __
+
+
+###################################################
 # Subject Extractor
 ###################################################
 
@@ -112,10 +162,9 @@ plurality_aggregation_flags:
     QUESTION_MAIN_EMPTY: blank
 
 
-
 ###################################################
 # Flags to define the bheavior of the
-# Legacy Extractor
+# Legacy Classification Extractor
 ###################################################
 
 legacy_extractor_flags:
@@ -190,54 +239,6 @@ add_subject_info_flags_legacy:
  - timestamps
  - capture_id
 
-
-###################################################
-# Flags to define the bheavior of the Extractor
-###################################################
-
-extractor_flags:
-    ANSWER_MAPPER:
-      0: '0'
-      n: '0'
-      'no': '0'
-      1: '1'
-      y: '1'
-      'yes': '1'
-    ANSWER_TYPE_MAPPER:
-      species:
-        no animals present: blank
-        noanimalspresent: blank
-        nothing: blank
-        nothinghere: blank
-        nothingthere: blank
-      count:
-        '1150': '11-50'
-        '51': '51+'
-      horns_count:
-        '1150': '11-50'
-        '51': '51+'
-    CLASSIFICATION_INFO_MAPPER:
-      subject_ids: subject_id
-    CLASSIFICATION_INFO_TO_ADD:
-     - user_name
-     - user_id
-     - created_at
-     - subject_ids
-     - workflow_id
-     - workflow_version
-     - classification_id
-    QUESTIONS_TO_IGNORE:
-     - dontcare
-    QUESTION_NAME_MAPPER:
-      arethereanyyoungpresent: young_present
-      choice: species
-      doyouseeanyantlers: antlers_visible
-      doyouseeanyhorns: horns_visible
-      howmany: count
-      howmanyanimalscanyouseethathavehorns: horns_count
-      question: species
-    QUESTION_PREFIX: question
-    QUESTION_DELIMITER: __
 
 ###################################################
 # Flags for the Report Generation
