cfg count aggregations

--- a/config/cfg_default.yaml
+++ b/config/cfg_default.yaml
@@ -160,6 +160,10 @@ plurality_aggregation_flags:
      - horns_count
     QUESTION_MAIN: species
     QUESTION_MAIN_EMPTY: blank
+    COUNT_AGGREGATION_MODES:
+      - median
+      - min
+      - max
 
 
 ###################################################
