--- a/config/cfg_default.yaml
+++ b/config/cfg_default.yaml
@@ -130,6 +130,47 @@ pre_processing_flags:
     legacy_invalid_codes:
       - '1'
       - '2'
+    #############################
+    # Format of final cleaned file
+    #############################
+    final_cleaned:
+      # order of first columns, any that are found will be exported in this
+      first_columns:
+        - capture_id
+        - season
+        - site
+        - roll
+        - capture
+        - image_rank_in_capture
+        - image_name
+        - image_path_rel
+        - datetime
+        - datetime_exif
+        - datetime_file_creation
+        - image_is_invalid
+        - image_datetime_uncertain
+        - image_no_upload
+        - image_was_deleted
+        - action_taken
+        - action_reason
+      # specify columns to exclude from the cleaned file, columns not in
+      # 'first_columns' and not in 'exclude_columns' will be appended
+      # warning: do not exclude important cols like:
+      #  capture_id, season, site, roll, capture, image_rank_in_capture 
+      exclude_columns:
+        - seconds_to_next_image_taken
+        - seconds_to_last_image_taken
+        - days_to_last_image_taken
+        - days_to_next_image_taken
+        - image_rank_in_roll
+        - image_name_original
+        - image_path_original
+        - image_path_original_rel
+      # flag to generally exclude EXIF data
+      exclude_exif_data: True
+      # flag to generally exclude image check flags
+      exclude_image_check_flags: True
+
 
 ###################################################
 # Flags to define the bheavior of the
