add test and extract capture_id from subject export

--- a/config/cfg_default.yaml
+++ b/config/cfg_default.yaml
@@ -247,7 +247,9 @@ subject_extractor_flags:
      - '#roll'
      - '#site'
      - '#capture'
+     - '#capture_id'
     SUBJECT_DATA_NAME_MAPPER:
+     '#capture_id': capture_id
      '#capture': capture
      '#roll': roll
      '#season': season
